2009-09-17  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Removed line 

	  *cupsFilter:   "application/vnd.apple-pdf 25 foomatic-rip"

	  from the Foomatic-generated PPD files, it causes problems with
	  some printers on Mac OS X (bug #386, removes enhancement of bug 
	  #313).

	* lib/Foomatic/DB.pm: Started work on get_combo_data_from_sql_db().
	  For now it collects the printer and driver info but not yet the
	  option data.

2009-09-16  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Added more methods for using an SQL database:
	  printer_exists_in_sql_db(), get_printers_for_driver_from_sql_db(),
	  get_drivers_for_printer_from_sql_db(), get_margins_from_sql_db(),
	  get_driver_packages_from_sql_db
	  Let overview and driver listing also include links to downloadable
	  packages and info about unprintable margins.
	  Do not create unneeded empty fields in the Perl data structures
	  when reading data sets from the SQL database.

2009-09-14  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Added more methods for using an SQL database:
	  get_driverlist_from_sql_db(), get_printerlist_from_sql_db(),
	  get_printer_from_sql_db(), get_driver_from_sql_db(),
	  get_driver_support_contacts_from_sql_db().
	  Added helper function get_make_model_from_id().

2009-09-11  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Added first methods for getting the data
	  from an SQL database instead of from an XML database:
	  connect_to_mysql_db(), disconnect_from_sql_db(),
	  get_overview_from_sql_db(), and helper function
	  read_conf_file(). It is checked whether valid database access
	  data is in the file mysql.conf in the default configuration
	  directory, and if so, the MySQL database is used.
	  Added also a DESTROY() method for Foomatic::DB which closes the
	  connection to the SQL database if one was used.

2009-08-19  Till Kamppeter <till.kamppeter@gmail.com>
